--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,9 @@
+/* DM Sans Google Font Link */
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@100;200&family=DM+Sans:wght@400;500;700&display=swap");
+
 .container {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
+  box-shadow: 0px -5px 8px 0px rgba(0, 0, 0, 0.75);
   position: fixed;
   top: 0;
   left: 0;
@@ -17,6 +21,19 @@ header {
   margin: 0 auto;
 }
 
+header h1 {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 44px;
+  color: #1070ff;
+}
+
+header span {
+  color: #000000;
+}
+
 nav {
   display: flex;
   align-items: center;
@@ -28,16 +45,32 @@ nav a {
   margin: 0 2rem;
   text-decoration: none;
   letter-spacing: 1.5px;
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 26px;
   color: #717172;
 }
 
+.reg-incase{
+  margin-left: 100px;
+}
+
 .reg-incase button {
-  font-family: 'DM Sans';
+  font-family: "DM Sans";
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: all 0.5s;
   line-height: 26px;
-  color: #FFFFFF;
+  color: #ffffff;
+  background: #1070ff;
+  outline: none;
+  border: 1px solid #1070ff;
+  padding: 5px 20px 5px 20px;
+  border-radius: 4px;
 }
 
 header .nav-btn {
@@ -55,10 +88,19 @@ header .nav-btn {
     height: 5vh;
   }
 }
+
 /* Small Screens */
 @media (max-width: 480px) {
-  header .nav-btn, .reg-incase {
-    display: block;
+  header .nav-btn,
+  .reg-incase {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 0;
+    gap: 20px;
+  }
+  .reg-incase button{
+    padding: 5px 50px 5px 50px;
   }
   header nav {
     position: fixed;
@@ -66,13 +108,13 @@ header .nav-btn {
     left: 0;
     height: 100%;
     width: 80%;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 3px 10px rgb(0 0 0 /0.2);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 1.5rem;
-    background-color: #3CBEFF;
+    background-color: #717172;
     color: white;
     transition: 1s;
     transform: translateX(-100vh);
@@ -81,6 +123,7 @@ header .nav-btn {
   nav a {
     color: white;
     font-weight: 400;
+    font-size: 20px;
   }
   header .responsive_nav {
     transform: none;
