--- a/src/Pages/NewsMenuPages/AllCategories.css
+++ b/src/Pages/NewsMenuPages/AllCategories.css
@@ -77,3 +77,17 @@
 .load_more span{
     color: #292D32;
 }
+
+
+/* Responsive starts here */
+
+/* medium screens */
+@media (max-width: 991px) {
+  .all_cat {
+    margin: 0 auto;
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+  }
+}
