--- a/src/assets/Hero.css
+++ b/src/assets/Hero.css
@@ -30,3 +30,30 @@
   line-height: 31px;
   color: #424245;
 }
+
+/* Responsive starts here */
+
+/* medium screens */
+@media (max-width: 991px) {
+  .hero h1 {
+    font-size: 75px;
+    line-height: 98px;
+  }
+  .hero p {
+    font-size: 16px;
+    line-height: 21px;
+  }
+}
+
+/* Small Screens */
+@media only screen and (max-width: 480px) {
+  .hero h1 {
+    font-size: 42px;
+    line-height: 55px;
+    margin-bottom: -10px;
+  }
+  .hero p {
+    font-size: 16px;
+    line-height: 21px;
+  }
+}
