--- a/src/assets/OurSources.css
+++ b/src/assets/OurSources.css
@@ -41,7 +41,7 @@
   font-size: 16px;
   line-height: 21px;
   color: #006600;
-  background: #BCD7FF;
+  background: #bcd7ff;
   border-radius: 30px;
   padding: 10px 15px 10px 15px;
 }
@@ -94,4 +94,28 @@
 
 .load_more_source span {
   color: #ffffff;
+}
+
+/* Responsive starts here */
+
+/* medium screens */
+@media (max-width: 991px) {
+  .source_cat {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Small Screens */
+@media only screen and (max-width: 480px) {
+  .our_sources {
+    padding: 20px;
+  }
+  .our_sources_header h1 {
+    font-size: 28px;
+    line-height: 36px;
+  }
+  .load_more_source h4 {
+    font-size: 14px;
+    line-height: 18px;
+  }
 }
