--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -66,3 +66,24 @@ footer {
   line-height: 19px;
   color: #ffffff;
 }
+
+
+/* Responsive starts here */
+
+/* medium screens */
+@media (max-width: 991px) {
+  .footer-link {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+  }
+}
+
+/* Small Screens */
+@media only screen and (max-width: 480px) {
+  .inner-footer {
+    flex-direction: column;
+  }
+  .footer-logo h1 {
+    padding-left: 40px;
+  }
+}
